[tool.poetry]
name = "board-project"
version = "0.1.0"
description = ""
authors = ["yeeunlee <chloe.yeeunl@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
mongoengine = "^0.20.0"
Flask-Classful = "^0.14.2"
marshmallow = "^3.7.1"
Flask-Cors = "^3.0.8"
flask = "1.1.1"
Pyjwt = "^1.7.1"
bcrypt = "^3.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
